<resources>
    <string name="app_name">Brainstorm</string>
    <string name="cot">cot</string>
    <string name="sec">sec</string>
    <string name="cosec">cosec</string>
    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="paranthesesO">(</string>
    <string name="paranthesesC">)</string>
    <string name="alpha">α</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="submit">Submit</string>
    <string name="del">DEL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="beta">β</string>
    <string name="pi">π</string>
    <string name="lessThan"><![CDATA[<]]></string>
    <string name="degree">°</string>
    <string name="greaterThan"><![CDATA[>]]></string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
</resources>
